# ci-infra

./: .checkov.yml  .ecrc  .editorconfig  .gitignore  .pre-commit-config.yaml  CODEOWNERS  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECRETS.md  Terrafile  cloud-account-access.md  github-admin-permissions.md  make.env  runner_container_build_system.md
osdc/: .coverage  .editorconfig  .editorconfig-checker.json  .gitignore  .hadolint.yaml  .kube-linter.yaml  .shellcheckrc  .tflint.hcl  .trivyignore  .yamllint.yaml  AGENTS.md  CLAUDE.md  clusters.yaml  compactor_tests_change.md  justfile  mise.toml  pyproject.toml  renovate.json  requirements.txt  ruff.toml
osdc/base/: CLAUDE.md
osdc/base/kubernetes/: algif-mitigation.yaml  dirtyfrag-mitigation.yaml  git-cache-server.yaml  git-cache-warmer.yaml  harbor-namespace.yaml  kustomization.yaml  node-performance-tuning.yaml  nvidia-device-plugin.yaml  osdc-system-namespace.yaml  registry-mirror-config.yaml  storageclass-gp3.yaml
osdc/base/logging/: CLAUDE.md  deploy.sh
osdc/base/node-compactor/: CLAUDE.md  deploy.sh
osdc/docs/: arc-fork-build-deploy.md  architecture.md  ci-pre-merge.md  cluster-recreation.md  current_runner_load_distribution.md  initialize-containers-slowness.md  loki_query.md  mimir_query.md  modules.md  node-utilization-optimization.md  node-warmup-and-scheduling-gates.md  observability-estimates.md  observability.md  operations.md  pr-migration.md  prod-cluster-ha-us-west-1.md  pypi-package-cache.md  quick_start_macos.md  runner-image-autoresolve.md  runner-image-autoupdate.md  runner_naming_convention.md
osdc/integration-tests/workflows/: build-image-scale.yaml  (+2 more)
osdc/investigation_arc_phantom_capacity/: bug_conclusion_arc_phantom_capacity.md  bug_evidence_initial.md  bug_hypotheses_initial.md  user_details.md
osdc/scripts/: .coverage  _tf_parse_helpers.py  audit-cgnat-overlap.sh  bootstrap-state-gcp.sh  bootstrap-state.sh  cleanup-git-cache.sh  cluster-config.py  deploy-log.sh  deploy-status.py  destroy-cluster.sh  helm-upgrade.sh  hf-cache-seed.py  kubeconfig-lock.sh  kubectl-apply.sh  mise-activate.sh  state-config.sh  test__tf_parse_helpers.py  test_cluster_config.py  test_deploy_status.py  test_validate_runner_bump.py  test_vpc_cni_addon.py  test_vpc_nat_topology.py  test_vpc_subnet_tags.py  test_wait_for_pr_validate.py  validate-runner-bump.py  validate-runner-bump.sh  wait-for-pr-validate.py  yaml-diff.py
runner-installer/: .dockerignore  .gitignore  Cargo.toml  Makefile  README.md
runner-installer/docker/: Dockerfile.ubuntu-jammy  README.md
runner-installer/src/: lib.rs  main.rs  utils.rs
runner-installer/tests/: container_tests.rs  docker_utils.rs  integration_tests.rs  mod.rs
(+1106 files in other folders)
